<resources>
    <string name="app_name">LocalVocal</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Take a Trip</string>
    <string name="title_activity_trip">.TripActivity</string>
    <string name="add_friends_from_contact_list">Add Friends</string>
    <string name="road_trip_buddies">Road Trip Buddies:</string>
    <string name="title_activity_travelling">Travelling</string>
    <string name="start_trip">Start Trip</string>
    <string name="title_activity_android_location_demo">AndroidLocationDemoActivity</string>
    <string name="title">Android Location Demo</string>
    <string name="btnSend">Send GET</string>
    <string name="button_start">Start GPS</string>
    <string name="button_stop">Stop GPS</string>
    <string name="location">Location:</string>
    <string name="unknown">Unknown</string>
    <string name="provider_disabled">Location provider disabled</string>
    <string name="provider_enabled">Location provider enabled</string>
    <string name="provider_status_changed">Location provider status changed</string>
</resources>
