<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <Button
        android:id="@+id/toggle_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/location" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/location_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />
    </ScrollView>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSend" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:id="@+id/tvCityInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />

        <Button
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/btnSound"
            android:layout_gravity="right" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivCity"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>